--- a/client/index.css
+++ b/client/index.css
@@ -7,7 +7,7 @@
 .container{
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color:black;
 }
 .nav{
     height: 10%;
@@ -16,8 +16,8 @@
     display:flex;
     justify-content:space-around;
     align-items: center;
-    font-family: cursive;
-    font-style: italic;
+    font-family:sans-serif;
+  
     color: gainsboro;
     flex-wrap: wrap;
 
@@ -25,21 +25,21 @@
 .main{
     
     display: flex;
-    height: 80%;
+    height: 85%;
     width: 100%;
    
 }
 .info{
     height: 100%;
-    width: 20%;
+    width: 30%;
     background-color:rgba(170, 164, 131, 0.1);
     display: flex;
     flex-direction: column;
     justify-content: start;
-    align-items: center;
+    align-items:center;
     color: whitesmoke;
-    
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: small;
+
     overflow-y: scroll;
     overscroll-behavior-y:calc();
      
@@ -60,14 +60,15 @@ margin: 5px;
     margin-top: 10px;
 }
 .chat{
-    width: 79%;
+    width: 69%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    color: blueviolet;
-    font-family: cursive;
+    color: white;
+    font-family: sans-serif;
     font-style: italic;
     font-size: small;
+    background-color: black;
     
     
 
@@ -80,7 +81,8 @@ margin: 5px;
     
 }
 #innerContainer  div p{
-    color: cadetblue;
+    color: white;
+    font-size: large;
 
 }
 #innerContainer div h6{
@@ -91,8 +93,7 @@ margin: 5px;
 .messages{
     width: 100%;
     height: 80%;
-    border: 2px solid white;
-
+   
 
     overflow-y: scroll;
 }
@@ -110,25 +111,34 @@ background-color: white;
     color: white;
     padding: 20px;
     border-radius: 5px;
-   
+   cursor: pointer;
     border: 0;
     outline: 0;
-    cursor: pointer;
+   border: 1px solid whitesmoke;
 }
 .text{
-    width: 70%;
-
-border: 0;
+    width: 100%;
+background-color: darkgrey;
+color: black;
+resize: none;
+font-size:x-large;
+font-weight:bold;
+border:0;
 outline: 0;
 }
 .author{
     display: flex;
 }
 #typing{
-    width: 100vw;
+    width: 50vw;
+    overflow-y: hidden;
+padding-left: 10px;
+    height: 35px;
 
-    height: 50px;
-    overflow-y: scroll;
+}
+.footer{
+    width: 100%;
+    height: 100%;
 }
 
 
