edit:changed the backgroundcolor to blue

--- a/client/index.css
+++ b/client/index.css
@@ -7,7 +7,7 @@
 .container{
     width: 100vw;
     height: 100vh;
-    background-color:black;
+    background-color:darkslategrey;
 }
 .nav{
     height: 10%;
